--- a/css/styles.css
+++ b/css/styles.css
@@ -707,13 +707,18 @@ body {
 }
 
 /* --------------Модалка----------- */
-.backdrop {
+.backdrop{
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
   left: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal{
+    transform: scale(2) rotate(180deg);
+
 }
 .modal {
   width: 528px;
@@ -724,8 +729,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   border-radius: 4px;
+  transform: scale(1) rotate(0) translate(-50%, -50%);
+  transition: transform 250ms;
 }
 .modal-close {
   position: absolute;
@@ -736,11 +742,17 @@ body {
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  display: block;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 .close-icon{
     width: 100%;
     height: 100%;
+}
+
+.is-hidden{
+visibility: hidden;
+opacity: 0;
+pointer-events: none;
 }
